# rust_diesel_graphql_playground

./: .env  Cargo.toml  README.md
migrations/2022-08-29-105810_create_author/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/models/: authors.rs  mod.rs  posts.rs
