[package]
name = "cargo_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = [ "postgres", "r2d2" ] }
dotenv = "0.15.0"
poem = "1.3.40"
async-graphql = "4.0.11"
tokio = { version = "1.20.1", features = [ "rt-multi-thread" ] }
async-graphql-poem = "4.0.11"
